--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
-# Node build artifacts
-node_modules
-npm-debug.log
+.token
 
 # Local development
 *.env
 *.dev
 .DS_Store
-
-# Docker
-Dockerfile
-docker-compose.yml
